Fix sidebar overflow

--- a/src/Pages/Authenticated/SessionSidebar/SessionSidebar.scss
+++ b/src/Pages/Authenticated/SessionSidebar/SessionSidebar.scss
@@ -18,7 +18,7 @@
   &__content {
     display: flex;
     flex-direction: column;
-    overflow-x: scroll;
+    overflow-y: auto;
     justify-content: space-between;
     height: calc(100% - 25px);
     padding: 20px 25px;
